[RELEASED] new version

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@types/node": "^10.12.12"
   },
   "dependencies": {
-    "spinal-env-viewer-graph-service": "file:../Spinal-Graph-Service",
-    "spinal-models-user": "file:../spinal-models-user",
+    "spinal-env-viewer-graph-service": "git+https://github.com/spinalcom/Spinal-Graph-Service.git",
+    "spinal-models-user": "git+git+https://github.com/spinalcom/spinal-models-user.git",
     "spinal-core-connectorjs_type": "git+https://github.com/spinalcom/spinal-core-connectorjs_type.git"
   }
 }
