[RELEASED] new version

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "spinal-env-viewer-graph-service": "git+https://github.com/spinalcom/Spinal-Graph-Service.git",
-    "spinal-models-user": "git+git+https://github.com/spinalcom/spinal-models-user.git",
+    "spinal-models-user": "git+https://github.com/spinalcom/spinal-models-user.git",
     "spinal-core-connectorjs_type": "git+https://github.com/spinalcom/spinal-core-connectorjs_type.git"
   }
 }
